@@ -485,13 +485,15 @@
   <programlisting>A colon is not allowed in the name XXX when namespaces are enabled.</programlisting>
 
  <para>
-  DTD Validation can be disabled on a per-buffer basis by inserting
-  the following in the first of last 10 lines of the buffer:
+  DTD Validation can be disabled on a global basis in the <guibutton>XML</guibutton>&gt;<guibutton>XML</guibutton> pane of the <guimenu>Plugins</guimenu>&gt;<guimenuitem>Plugin Options</guimenuitem> dialog box.
+  It can also be disabled on a per-buffer basis by inserting
+  the following in the first or last 10 lines of the buffer:
  </para>
  <programlisting>:xml.validate.ignore-dtd=true:</programlisting>
  <para>This way, one can use DTDs for entities and a schema for validation.
- Here is a sample of what you'd do :
+ Here is a sample of what you'd do:
  <programlisting>
+&lt;? xml version="1.0" ?>
 &lt;!-- :xml.validate.ignore-dtd=true: -->
 &lt;!DOCTYPE article [
   &lt;!ENTITY % isolat1 PUBLIC "ISO 8879:1986//ENTITIES Added Latin 1//EN//XML"
