@@ -60,6 +60,7 @@ options.sidekick.general.info=<p>Siehe <b>Plugin Optionen - Sidekick - Allgemein
 options.xml.general.label=XML
 options.xml.general.tageditor.popupOnCompletion=Tag-Editor öffnen nach Vervollständigung
 options.xml.general.validate= DTD oder Schema auf Verfügbarkeit prüfen
+options.xml.general.validate.ignore-dtd=Nicht mit DTD prüfen
 options.xml.general.network-mode=DTD und Schema herunterladen:
 
 options.xml.general.validate-separator=Validierung
