@@ -48,6 +48,7 @@ options.sidekick.general.info=<p>Rendez-vous à <b>Options des plugins - Sidekic
 options.xml.general.label=XML
 options.xml.general.tageditor.popupOnCompletion=Ouvrir la popup d'édition de balises après complétion
 options.xml.general.validate=Valider si la DTD ou le schéma est disponible
+options.xml.general.validate.ignore-dtd=Ne pas valider en utilisant la DTD
 options.xml.general.network-mode=Téléchargement de DTD et schémas :
 
 options.xml.general.validate-separator=Validation
